feat: IM Signal and Connector
